# component-ftp-writer

./: Dockerfile  docker-compose.yml  flake8.cfg  pyproject.toml
.github/workflows/: push.yml
component_config/: configRowSchema.json  configSchema.json
src/: component.py  configuration.py
tests/: __init__.py  test_component.py
tests/e2e_configs/ftp/: config.json
tests/e2e_configs/sftp/: config.json
tests/e2e_configs/sftp/in/tables/: test.csv
